# Computation-Communication-Fusion

./: .gitignore  .gitmodules  README.md
LoopTilingPass/: CMakeLists.txt  LoopTiling.h  loop_tiler_final.cpp  looptilingpass.cpp
basic_cuda/: build.sh  build_steps.txt  main-cuda-nvptx64-nvidia-cuda-sm_89.bc  main.cu  main.ll  main.ptx  new_main.cubin  run.py  simple_kernel.cubin
comp_comm_kernel/: CMakeLists.txt  basic-cuda-nvptx64-nvidia-cuda-sm_89.bc  basic.ll  basic.ptx  basic_gemm.cubin  basic_gemm_run.py  basic_gemm_timing_benchmark.py  build.sh  clean.sh  gemm.cu  manual_gemm_timing_benchmark.py  manually_optimized_gemm_run.py  optimized-cuda-nvptx64-nvidia-cuda-sm_89.bc  optimized.cu  optimized.ll  optimized.ptx  optimized_gem_run.py  optimized_gemm_from_ll.cubin  optimized_gemm_run.py  optimized_gemm_timing_benchmark.py  original_gemm_run.py  output.txt  readme  test.ll
comp_comm_kernel/LoopTilingPass/: CMakeLists.txt
comp_comm_kernel/benchmarks/: CoreMatrixMult.py  manually_optimized_cache_profiler.py  optimized_cache_profiler.py  original_cache_profiler.py  original_metrics.txt  parse_mem_wrkld_analysis.py  test_correctness.py  test_l2_cache_hit_manually_optimized.sh  test_l2_cache_hit_optimized.sh  test_l2_cache_hit_original.sh  test_performance.py  test_simple.py
comp_comm_kernel/benchmarks/results/: average_metric_in_file.sh  manually_optimized_mem_wrkld_analysis.txt  manually_optimized_metrics.txt  optimized_mem_wrkld_analysis.txt  optimized_metrics.txt  original_mem_wrkld_analysis.txt  parse_metric_across_all_files.sh  timing_metrics.txt
(+8 files in other folders)
